--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/IAmThermite/TF2Frags.net#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.2.2",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "env": "0.0.2",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "express-ws": "^4.0.0",
     "helmet": "^3.19.0",
