--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongodb": "^3.3.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-steam": "^1.0.10"
+    "passport-steam": "^1.0.10",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
