--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.2.2",
     "connect-mongodb-session": "^2.2.0",
+    "cors": "^2.8.5",
     "ejs": "^2.6.2",
     "emoji-flags": "^1.2.0",
     "express": "^4.17.1",
