--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production pm2 start server.js --watch --env production",
     "dev": "NODE_ENV=development nodemon server.js",
-    "test": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --recursive tests/**/*.test.js  --exit"
+    "test": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --recursive tests/**/*.test.js  --exit",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
